--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AirBnB clone</title>
+  <img src="images/logo.png" alt="Logo">
   <link rel="stylesheet" href="styles/4-common.css">
   <link rel="stylesheet" href="styles/3-header.css">
   <link rel="stylesheet" href="styles/3-footer.css">
@@ -16,11 +17,11 @@
     <section class="filters">
       <div class="locations">
         <h3>States</h3>
-        <h4>Select your preferred states (multiple allowed)</h4>
+        <h4>Select your staes</h4>
       </div>
       <div class="amenities">
         <h3>Amenities</h3>
-        <h4>Select your desired amenities (multiple allowed)</h4>
+        <h4>Exceptios_apartments</h4>
       </div>
       <button>Search</button>
     </section>
