--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -12,6 +12,9 @@ i<!DOCTYPE html>
 </head>
 <body>
   <header>
+    <div class="image">
+      <img src="images/logo.png">
+    </div>
     </header>
   <div class="container">
     <section class="filters">
@@ -30,9 +33,9 @@ i<!DOCTYPE html>
     <section class="places">
       <h1>Places</h1>
       <article>
-        <h2>Place Name 1</h2>
+        <h2>My home</h2>
         <div class="price_by_night">
-          $120
+          $80
         </div>
         <div class="information">
           <div class="max_guest">
@@ -49,7 +52,53 @@ i<!DOCTYPE html>
           Owner: <strong>John Doe</strong>
         </div>
         <div class="description">
+          This is the Exception:) Indulge in opulent living with our exquisite luxury apartments worldwide. Immerse yourself in breathtaking views, unparalleled amenities, and unparalleled elegance. Elevate your lifestyle with the epitome of sophistication. Discover your dream home with us.
+        </div>
+      </article>
+      <article>
+        <h2>Tint house</h2>
+        <div class="price_by_night">
+          $65
+        </div>
+        <div class="information">
+          <div class="max_guest">
+            4 Guests <i class="icon-user"></i>
+          </div>
+          <div class="number_rooms">
+            2 Bedroom <i class="icon-bed"></i>
+          </div>
+          <div class="number_bathrooms">
+            1 Bathroom <i class="icon-bath"></i>
+          </div>
+        </div>
+        <div class="user">
+          Owner: <strong>ExceptionX</strong>
+        </div>
+        <div class="description">
           Indulge in opulent living with our exquisite luxury apartments worldwide. Immerse yourself in breathtaking views, unparalleled amenities, and unparalleled elegance. Elevate your lifestyle with the epitome of sophistication. Discover your dream home with us.
+        </div>
+      </article>
+      <article>
+        <h2>A suite</h2>
+        <div class="price_by_night">
+          $1000
+        </div>
+        <div class="information">
+          <div class="max_guest">
+            5 Guests <i class="icon-user"></i>
+          </div>
+          <div class="number_rooms">
+            4 Bedroom <i class="icon-bed"></i>
+          </div>
+          <div class="number_bathrooms">
+            1 Bathroom <i class="icon-bath"></i>
+          </div>
+        </div>
+        <div class="user">
+          Owner: <strong>Pascal Ch</strong>
+        </div>
+        <div class="description">
+          This is the Chinemerem:) Indulge in opulent living with our exquisite luxury apartments worldwide. Immerse yourself in breathtaking views, unparalleled amenities, and unparalleled elegance. Elevate your lifestyle with the epitome of sophistication. Discover your dream home with us.
         </div>
       </article>
       </section>
