--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -6,11 +6,12 @@
   <title>AirBnB clone</title>
   <link rel="stylesheet" href="styles/4-common.css">
   <link rel="stylesheet" href="styles/3-header.css">
-  <link rel="stylesheet" href="styles/3-footer.css">
   <link rel="stylesheet" href="styles/4-filters.css">
+  <link rel="stylesheet" href="styles/3-footer.css">
 </head>
 <body>
   <header>
+    <img src="images/logo.png" alt="Logo">
     </header>
   <div class="container">
     <section class="filters">
