--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
   <header>
+    <div class="image">
+      <img src="images/logo.png">
+    </div>
     </header>
   <div class="container">
     <section class="filters">
@@ -19,11 +22,17 @@
         <h4>Select your preferred states (multiple allowed)</h4>
         <ul class="popover">
           <li>
-            <h2>California</h2>
+            <h2>Arizona:</h2>
+            <ul>
+              <li>Page</li>
+              <li>Page2</li>
+            </ul>
+          </li>
+          <li>
+            <h2>California:</h2>
             <ul>
               <li>Los Angeles</li>
               <li>San Francisco</li>
-              <li>San Diego</li>
             </ul>
           </li>
           </ul>
@@ -31,6 +40,14 @@
       <div class="amenities">
         <h3>Amenities</h3>
         <h4>Select your desired amenities (multiple allowed)</h4>
+        <ul class="popover">
+          <li>
+          <li>Internet</li>
+          <li>TV</li>
+          <li>Kitchen</li>
+          <li>Iron</li>
+          </li>
+        </ul>
         </div>
       <button>Search</button>
     </section>
