--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
   <header>
+    <div class="image">
+      <img src="images/logo.png">
+    </div>
     </header>
   <div class="container">
     <section class="filters">
@@ -19,18 +22,46 @@
         <h3>States</h3>
         <h4>Select your preferred states (multiple allowed)</h4>
         <ul class="popover">
+          <li>
+            <h2>Arizona:</h2>
+            <ul>
+              <li>Page</li>
+              <li>Page2</li>
+            </ul>
+          </li>
+          <li>
+            <h2>California:</h2>
+            <ul>
+              <li>Los Angeles</li>
+              <li>San Francisco</li>
+            </ul>
+          </li>
           </ul>
       </div>
       <div class="amenities">
         <h3>Amenities</h3>
         <h4>Select your desired amenities (multiple allowed)</h4>
+        <ul class="popover">
+          <li>
+          <li>Internet</li>
+          <li>TV</li>
+          <li>Kitchen</li>
+          <li>Iron</li>
+          </li>
+        </ul>
         </div>
       <button>Search</button>
     </section>
     <section class="places">
       <h1>Places</h1>
-      <article>
-        <h2>Place Name 1</h2>
+        <article>
+          <h2>My home</h2>
+        </article>
+        <article>
+          <h2>Tiny house</h2>
+        </article>
+        <article>
+          <h2>A suite</h2>
         </article>
       </section>
   </div>
