--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -15,7 +15,8 @@ i<!DOCTYPE html>
     <div class="image">
       <img src="images/logo.png">
     </div>
-    </header>
+  </header>
+  <hr>
   <div class="container">
     <section class="filters">
       <div class="locations">
@@ -56,7 +57,7 @@ i<!DOCTYPE html>
         </div>
       </article>
       <article>
-        <h2>Tint house</h2>
+        <h2>Tiny house</h2>
         <div class="price_by_night">
           $65
         </div>
